keyboard event doesn't fire while moving mouse with button pressed https://bugs.webkit.org/show_bug.cgi?id=73821

Patch by Rakesh KN <rakesh.kn@motorola.com> on 2011-12-08
Reviewed by Alexey Proskuryakov.

Autoscroll should not stop on key press.

Source/WebCore:

Test: fast/events/autoscroll-should-not-stop-on-keypress.html

* page/EventHandler.cpp:
(WebCore::EventHandler::keyEvent):
Removed the check for autoscroll so that autoscroll is not stopped on
key press and key event is processed.

LayoutTests:

* fast/events/autoscroll-should-not-stop-on-keypress-expected.txt: Added.
* fast/events/autoscroll-should-not-stop-on-keypress.html: Added.

Canonical link: https://commits.webkit.org/90813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102408 268f45cc-cd09-0410-ab3c-d52691b4dbfc